feat: implement User CRUD endpoints and logic