@@ -1,97 +1,46 @@
 package com.haru.marketspring.exception;
 
 import com.haru.marketspring.dto.ApiErrorResponse;
-import jakarta.validation.ConstraintViolationException;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.context.request.WebRequest;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
-@Slf4j
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<ApiErrorResponse> handleResourceNotFound(ResourceNotFoundException ex) {
-        ApiErrorResponse body = ApiErrorResponse.of(
-                ex.getMessage(),
-                "Not Found"
-        );
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(body);
+    @ExceptionHandler(GenericNotFoundException.class)
+    public ResponseEntity<ApiErrorResponse> handleGenericNotFoundException(GenericNotFoundException ex, WebRequest request) {
+        ApiErrorResponse errorResponse = ApiErrorResponse.of(ex.getMessage(), "NOT_FOUND");
+        return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
     }
 
-    @ExceptionHandler(BadRequestException.class)
-    public ResponseEntity<ApiErrorResponse> handleBadRequest(BadRequestException ex) {
-        ApiErrorResponse body = ApiErrorResponse.of(
-                ex.getMessage(),
-                "Bad Request"
-        );
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
+    @ExceptionHandler(IllegalArgumentException.class)
+    public ResponseEntity<ApiErrorResponse> handleIllegalArgumentException(IllegalArgumentException ex, WebRequest request) {
+        ApiErrorResponse errorResponse = ApiErrorResponse.of(ex.getMessage(), "BAD_REQUEST");
+        return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(ConflictException.class)
-    public ResponseEntity<ApiErrorResponse> handleConflict(ConflictException ex) {
-        ApiErrorResponse body = ApiErrorResponse.of(
-                ex.getMessage(),
-                "Conflict"
-        );
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(body);
-    }
-
-    // Bean Validation (@Valid on DTOs) errors
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiErrorResponse> handleValidationErrors(MethodArgumentNotValidException ex) {
-        List<String> details = ex.getBindingResult()
+    public ResponseEntity<ApiErrorResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        List<String> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(this::formatFieldError)
-                .toList();
+                .map(error -> error.getField() + ": " + error.getDefaultMessage())
+                .collect(Collectors.toList());
 
-        ApiErrorResponse body = ApiErrorResponse.of(
-                "Validation failed",
-                "Bad Request",
-                details
-        );
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
+        ApiErrorResponse errorResponse = ApiErrorResponse.of("Validation failed", "BAD_REQUEST", errors);
+        return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
     }
 
-    // Constraint violations that happen outside of @Valid body (e.g., @Validated on method params)
-    @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ApiErrorResponse> handleConstraintViolation(ConstraintViolationException ex) {
-        List<String> details = ex.getConstraintViolations()
-                .stream()
-                .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
-                .toList();
-
-        ApiErrorResponse body = ApiErrorResponse.of(
-                "Constraint violation",
-                "Bad Request",
-                details
-        );
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
-    }
-
-    // Fallback for any other unhandled exception
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiErrorResponse> handleGenericException(Exception ex) {
-        // Log the full stack trace for debugging purposes (visible in server logs only)
-        log.error("Unexpected internal error: ", ex);
-
-        // Return a generic safe message to the client
-        ApiErrorResponse body = ApiErrorResponse.of(
-                "An unexpected internal error occurred. Please contact support.",
-                "Internal Server Error",
-                List.of()
-        );
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(body);
-    }
-
-    private String formatFieldError(FieldError fieldError) {
-        return fieldError.getField() + ": " + fieldError.getDefaultMessage();
+    public ResponseEntity<ApiErrorResponse> handleGlobalException(Exception ex, WebRequest request) {
+        ApiErrorResponse errorResponse = ApiErrorResponse.of("An unexpected error occurred", "INTERNAL_SERVER_ERROR");
+        return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
